Starting refactor of FunctionalDataProcessor to allow for multiple strategies