@@ -2,7 +2,6 @@ package org.broadinstitute.dropseqrna.utils.readiterators;
 
 import org.broadinstitute.dropseqrna.annotation.functionaldata.DropSeqFunctionalDataProcessor;
 import org.broadinstitute.dropseqrna.annotation.functionaldata.FunctionalData;
-import org.broadinstitute.dropseqrna.annotation.functionaldata.AbstractFunctionalDataProcessor;
 import org.broadinstitute.dropseqrna.annotation.functionaldata.FunctionalDataProcessorI;
 import org.testng.Assert;
 import org.testng.annotations.Test;
@@ -24,7 +23,7 @@ public class DropSeqFunctionalDataProcessorTest {
 		Assert.assertEquals(fdList.size(), 1);
 		FunctionalData fd = fdList.get(0);
 		Assert.assertEquals(fd.getGene(), genes[0]);
-		Assert.assertEquals(fd.getStrand(), strands[0]);
+		Assert.assertEquals(fd.isGeneNegativeStrand(), strands[0]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 
 		fdList = fdp.filterToPreferredAnnotations(fdList);
@@ -65,7 +64,7 @@ public class DropSeqFunctionalDataProcessorTest {
 
 		FunctionalData fd = fdList.get(0);
 		Assert.assertEquals(fd.getGene(), genes[1]);
-		Assert.assertEquals(fd.getStrand(), strands[1]);
+		Assert.assertEquals(fd.isGeneNegativeStrand(), strands[1]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 
 		fdList = fdp.filterToPreferredAnnotations(fdList);
@@ -84,9 +83,9 @@ public class DropSeqFunctionalDataProcessorTest {
 		// SENSE STRAND TEST positive strand
 		List<FunctionalData> fdList = fdp.getFilteredFunctionalData(genes, strands, locusFunctions, false);
 		Assert.assertEquals(fdList.size(), 1);
-		FunctionalData fd = fdList.get(0);
+		FunctionalData fd = fdList.getFirst();
 		Assert.assertEquals(fd.getGene(), genes[0]);
-		Assert.assertEquals(fd.getStrand(), strands[0]);
+		Assert.assertEquals(fd.isGeneNegativeStrand(), strands[0]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 
 		// SENSE STRAND TEST negative strand
@@ -94,7 +93,7 @@ public class DropSeqFunctionalDataProcessorTest {
 		Assert.assertEquals(fdList.size(), 1);
 		fd = fdList.get(0);
 		Assert.assertEquals(fd.getGene(), genes[1]);
-		Assert.assertEquals(fd.getStrand(), strands[1]);
+		Assert.assertEquals(fd.isGeneNegativeStrand(), strands[1]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[1]);
 
 		// ANTISENSE STRAND TESTs
@@ -105,7 +104,7 @@ public class DropSeqFunctionalDataProcessorTest {
 		Assert.assertEquals(fdList.size(), 1);
 		fd = fdList.get(0);
 		Assert.assertEquals(fd.getGene(), genes[0]);
-		Assert.assertEquals(fd.getStrand(), strands[0]);
+		Assert.assertEquals(fd.isGeneNegativeStrand(), strands[0]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 
 		// ANTISENSE SENSE STRAND TEST positive strand
@@ -113,7 +112,7 @@ public class DropSeqFunctionalDataProcessorTest {
 		Assert.assertEquals(fdList.size(), 1);
 		fd = fdList.get(0);
 		Assert.assertEquals(fd.getGene(), genes[1]);
-		Assert.assertEquals(fd.getStrand(), strands[1]);
+		Assert.assertEquals(fd.isGeneNegativeStrand(), strands[1]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[1]);
 
 		// BOTH returns both A and B.
@@ -136,9 +135,9 @@ public class DropSeqFunctionalDataProcessorTest {
 
 		List<FunctionalData> fdList = fdp.getFilteredFunctionalData(genes, strands, locusFunctions, false);
 		Assert.assertEquals(fdList.size(), 1);
-		FunctionalData fd = fdList.get(0);
+		FunctionalData fd = fdList.getFirst();
 		Assert.assertEquals(fd.getGene(), genes[0]);
-		Assert.assertEquals(fd.getStrand(), strands[0]);
+		Assert.assertEquals(fd.isGeneNegativeStrand(), strands[0]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 
 		fdList = fdp.filterToPreferredAnnotations(fdList);
@@ -161,11 +160,11 @@ public class DropSeqFunctionalDataProcessorTest {
 		Assert.assertEquals(fdList.size(), 2);
 		FunctionalData fd = fdList.get(0);
 		Assert.assertEquals(fd.getGene(), genes[0]);
-		Assert.assertEquals(fd.getStrand(), strands[0]);
+		Assert.assertEquals(fd.isGeneNegativeStrand(), strands[0]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 		FunctionalData fd2 = fdList.get(1);
 		Assert.assertEquals(fd2.getGene(), genes[1]);
-		Assert.assertEquals(fd2.getStrand(), strands[1]);
+		Assert.assertEquals(fd2.isGeneNegativeStrand(), strands[1]);
 		Assert.assertEquals(fd2.getLocusFunction(), locusFunctions[1]);
 
 		// once you filter to the preferred annotations, coding is "the best", so you only have a single FunctionalData.
@@ -173,7 +172,7 @@ public class DropSeqFunctionalDataProcessorTest {
 		Assert.assertEquals(fdList.size(), 1);
 		fd = fdList.get(0);
 		Assert.assertEquals(fd.getGene(), genes[0]);
-		Assert.assertEquals(fd.getStrand(), strands[0]);
+		Assert.assertEquals(fd.isGeneNegativeStrand(), strands[0]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 	}
 
@@ -193,11 +192,11 @@ public class DropSeqFunctionalDataProcessorTest {
 		Assert.assertEquals(fdList.size(), 2);
 		FunctionalData fd = fdList.get(0);
 		Assert.assertEquals(fd.getGene(), genes[0]);
-		Assert.assertEquals(fd.getStrand(), strands[0]);
+		Assert.assertEquals(fd.isGeneNegativeStrand(), strands[0]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 		FunctionalData fd2 = fdList.get(1);
 		Assert.assertEquals(fd2.getGene(), genes[1]);
-		Assert.assertEquals(fd2.getStrand(), strands[1]);
+		Assert.assertEquals(fd2.isGeneNegativeStrand(), strands[1]);
 		Assert.assertEquals(fd2.getLocusFunction(), locusFunctions[1]);
 
 		// once you filter to the preferred annotations, both are still present.
@@ -205,11 +204,11 @@ public class DropSeqFunctionalDataProcessorTest {
 		Assert.assertEquals(fdList.size(), 2);
 		fd = fdList.get(0);
 		Assert.assertEquals(fd.getGene(), genes[0]);
-		Assert.assertEquals(fd.getStrand(), strands[0]);
+		Assert.assertEquals(fd.isGeneNegativeStrand(), strands[0]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 		fd2 = fdList.get(1);
 		Assert.assertEquals(fd2.getGene(), genes[1]);
-		Assert.assertEquals(fd2.getStrand(), strands[1]);
+		Assert.assertEquals(fd2.isGeneNegativeStrand(), strands[1]);
 		Assert.assertEquals(fd2.getLocusFunction(), locusFunctions[1]);
 	}
 
